--- a/Proyecto_TRM/sonar-project.properties
+++ b/Proyecto_TRM/sonar-project.properties
@@ -1,19 +1,7 @@
-# must be unique in a given SonarQube instance
-sonar.projectKey=aliatic-trm-ms
-
-# --- optional properties ---
-
-# defaults to project key
-#sonar.projectName=My project
-# defaults to 'not provided'
-#sonar.projectVersion=1.0
- 
-# Path is relative to the sonar-project.properties file. Defaults to .
-sonar.sources=.
- 
-# Encoding of the source code. Default is default system encoding
-sonar.sourceEncoding=UTF-8
-
-sonar.host.url=http://192.168.1.80:9000
-sonar.token=sqp_047b2be196b13a5a4207a1b80a7e0dcc9ff8888b
+sonar.login=sqp_512793e0c4f41af957c070553512b856bbf491d0
+sonar.projectKey=trm-ms
 sonar.scm.disabled=true
+sonar.sources=./src/main/java/
+sonar.exclusions=**/dto/**/*
+sonar.java.binaries=./target/classes
+sonar.qualitygate.ignoreSmallChanges=fale
